--- a/site_v3 files/index.html
+++ b/site_v3 files/index.html
@@ -105,8 +105,7 @@
         		<img class="half-image" id="scroll-down" src="img/scroll-down-first.png">
         	</a>
         	<img id="intro" src="img/site-header.png">
-        		<a class="twitter" href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fdev.twitter.com%2Fopensource&related=twitterapi&text=Students%20should%20pay%20less%20for%20loans&tw_p=tweetbutton&url=https%3A%2F%2Fdev.twitter.com%2Fopensource
-"/>
+        		<a class="twitter" href="https://twitter.com/intent/tweet?original_referer=http:%2F%2Felizabethwarren.com&related=bankonstudents&text=Tell%20congress%20to%20support%20The%20Student%20Loan%20Fairness%20Act%3A%20don't%20double%20student%20loan%20rates%20on%20July%201st!+%23bankonstudents&tw_p=tweetbutton&url=http:%2F%2F1.usa.gov/11ogCpc"/>
         		<img class="half-image" id="twitter" src="img/twitter-first.png">
         	</a>    
         
@@ -124,8 +123,7 @@
         	<img class="half-image" id="scroll-down" src="img/scroll-down.png">
         </a>
             <h1 class="animate-in">It's time to act.</h1>
-            <a class="twitter" href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fdev.twitter.com%2Fopensource&related=twitterapi&text=Students%20should%20pay%20less%20for%20loans&tw_p=tweetbutton&url=https%3A%2F%2Fdev.twitter.com%2Fopensource
-">
+            <a class="twitter" href="https://twitter.com/intent/tweet?original_referer=http:%2F%2Felizabethwarren.com&related=bankonstudents&text=Tell%20congress%20to%20support%20The%20Student%20Loan%20Fairness%20Act%3A%20don't%20double%20student%20loan%20rates%20on%20July%201st!+%23bankonstudents&tw_p=tweetbutton&url=http:%2F%2F1.usa.gov/11ogCpc">
         <img class="half-image" id="twitter" src="img/twitter.png">
         </a> 
             	<br>
@@ -144,8 +142,7 @@
         <a class="scroll-down nav-button" href="#big-debt">
         <img class="half-image" id="scroll-down" src="img/scroll-down-white.png">
         </a>
-        <a class="twitter" href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fdev.twitter.com%2Fopensource&related=twitterapi&text=Students%20should%20pay%20less%20for%20loans&tw_p=tweetbutton&url=https%3A%2F%2Fdev.twitter.com%2Fopensource
-">
+        <a class="twitter" href="https://twitter.com/intent/tweet?original_referer=http:%2F%2Felizabethwarren.com&related=bankonstudents&text=On%20Jul%201%20fed.%20student%20loan%20rts%20increase%20from%203.4%20to%206.8%25.%20Banks%20pay%200.75%25%20on%20gov't%20loans.%20%23isthatfair%3F%23bankonstudents&tw_p=tweetbutton&url=http:%2F%2F1.usa.gov/11ogCpc">
         <img class="half-image" id="twitter" src="img/twitter-white.png">
         </a> 
         	<img class="half-img animate-in" data-animation="fly-in-left" src="img/students-graph.png">
@@ -164,8 +161,7 @@
         <a class="scroll-down nav-button" href="#house">
         <img class="half-image" id="scroll-down" src="img/scroll-down.png">
         </a>
-        <a class="twitter" href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fdev.twitter.com%2Fopensource&related=twitterapi&text=Students%20should%20pay%20less%20for%20loans&tw_p=tweetbutton&url=https%3A%2F%2Fdev.twitter.com%2Fopensource
-">
+        <a class="twitter" href="https://twitter.com/intent/tweet?original_referer=http:%2F%2Felizabethwarren.com&related=bankonstudents&text=Student%20loan%20debt%20is%20bigger%20than%20all%20US%20credit%20card%20debt.%20Tell%20Congress%3A%20%23dontdoublerates%20%23bankonstudents&tw_p=tweetbutton&url=http:%2F%2F1.usa.gov/11ogCpc">
         <img class="half-image" id="twitter" src="img/twitter.png">
         </a> 
             	<h1>Student debt is huge. Why make it bigger?</h1>
@@ -187,7 +183,7 @@
         <a class="scroll-down nav-button" href="#big-profit">
         <img class="half-image" id="scroll-down" src="img/scroll-down-white.png">
         </a>
-        <a class="twitter" href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fdev.twitter.com%2Fopensource&related=twitterapi&text=Students%20should%20pay%20less%20for%20loans&tw_p=tweetbutton&url=https%3A%2F%2Fdev.twitter.com%2Fopensource
+        <a class="twitter" href="https://twitter.com/intent/tweet?original_referer=http:%2F%2Felizabethwarren.com&related=bankonstudents&text=Doubling%20student%20loan%20rates%20is%20a%20burden%20on%20young%20Americans%20and%20the%20economy.%20%23dontdoublerates%20%23bankonstudents&tw_p=tweetbutton&url=http:%2F%2F1.usa.gov/11ogCpc
 ">
         <img class="half-image" id="twitter" src="img/twitter-white.png">
         </a> 
@@ -205,8 +201,7 @@
         <a class="scroll-down nav-button" href="#thats-enough">
         <img class="half-image" id="scroll-down" src="img/scroll-down.png">
         </a>
-        <a class="twitter" href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fdev.twitter.com%2Fopensource&related=twitterapi&text=Students%20should%20pay%20less%20for%20loans&tw_p=tweetbutton&url=https%3A%2F%2Fdev.twitter.com%2Fopensource
-">
+        <a class="twitter" href="https://twitter.com/intent/tweet?original_referer=http:%2F%2Felizabethwarren.com&related=bankonstudents&text=Gov't%20will%20make%20%2434bn%20on%20student%20loans%20in%202013.%20Why%20are%20we%20doubling%20interest%20rates%3F%20%23bankonstudents&tw_p=tweetbutton&url=http:%2F%2F1.usa.gov/11ogCpc">
         <img class="half-image" id="twitter" src="img/twitter.png">
         </a> 
         	<div>
@@ -224,8 +219,7 @@
         <a class="scroll-down nav-button" href="#warren">
         <img class="half-image" id="scroll-down" src="img/scroll-down-white.png">
         </a>
-        <a class="twitter" href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fdev.twitter.com%2Fopensource&related=twitterapi&text=Students%20should%20pay%20less%20for%20loans&tw_p=tweetbutton&url=https%3A%2F%2Fdev.twitter.com%2Fopensource
-">
+        <a class="twitter" href="https://twitter.com/intent/tweet?original_referer=http:%2F%2Felizabethwarren.com&related=bankonstudents&text=Gov't%20profits%20on%20student%20loans%20could%20pay%20for%20all%20US%20college%20student%20txtbooks%20for%20a%20year.%20%23dontdouble%20%23bankonstudents&tw_p=tweetbutton&url=http:%2F%2F1.usa.gov/11ogCpc">
         <img class="half-image" id="twitter" src="img/twitter-white.png">
         </a> 
         	<p class="animate-in bb-text" id="bb-text3">That's enough to pay for every college student's textbooks <strong>for a year.</strong></p>
@@ -256,8 +250,7 @@
         <a class="scroll-down nav-button" href="#take-action">
         <img class="half-image" id="scroll-down" src="img/scroll-down.png">
         </a>
-        <a class="twitter" href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fdev.twitter.com%2Fopensource&related=twitterapi&text=Students%20should%20pay%20less%20for%20loans&tw_p=tweetbutton&url=https%3A%2F%2Fdev.twitter.com%2Fopensource
-">
+        <a class="twitter" href="https://twitter.com/intent/tweet?original_referer=http:%2F%2Felizabethwarren.com&related=bankonstudents&text=Charging%20students%209x%20more%20than%20mega-banks%20to%20loan%20money%20from%20the%20Gov't%20isn't%20right.%20%20%23dontdoublerates%20%23bankonstudents&tw_p=tweetbutton&url=http:%2F%2F1.usa.gov/11ogCpc">
         <img class="half-image" id="twitter" src="img/twitter.png">
         </a> 
         	<img class="half-img"  id="the-fed" src="img/fed.png"><h1>The Plan:</h1><img class="half-img"  id="the-fed" src="img/college.png">
@@ -271,8 +264,7 @@
         <a class="scroll-down nav-button" href="#title">
         <img class="half-image" id="scroll-down" src="img/scroll-up.png">
         </a>
-        <a class="twitter" href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fdev.twitter.com%2Fopensource&related=twitterapi&text=Students%20should%20pay%20less%20for%20loans&tw_p=tweetbutton&url=https%3A%2F%2Fdev.twitter.com%2Fopensource
-">
+        <a class="twitter" href="https://twitter.com/intent/tweet?original_referer=http:%2F%2Felizabethwarren.com&related=bankonstudents&text=Keep%20student%20interest%20rates%20low%2C%20just%20like%20we%20do%20for%20mega-banks.%20Pass%20The%20Student%20Loan%20Fairness%20Act%20%23bankonstudents&tw_p=tweetbutton&url=http:%2F%2F1.usa.gov/11ogCpc">
         <img class="half-image" id="twitter" src="img/twitter-white.png">
         </a> 
         	<h1 id="take-action-text">Tell Congress to take Action.</h1>
